--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -59,3 +59,7 @@ to prevent collapsing during animation*/
   -moz-transform: translate3d(100px, 0, 0);
   transform: translate3d(100px, 0, 0);
 }
+
+#myID {
+  width: 50%;
+}
