--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -1,25 +1,31 @@
 <div class="form-group">
     <label for="name" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.name" class="form-control" id="name" placeholder="Shipwreck Name"/>
+        <input type="text" ng-model="shipwreck.name" class="form-control" id="name" placeholder="Candidate Name" readonly/>
     </div>
 </div>
 <div class="form-group">
-    <label for="description" class="col-sm-2 control-label">Description</label>
+    <label for="role" class="col-sm-2 control-label">Role</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.description" class="form-control" id="description" placeholder="Shipwreck Description"/>
+        <input type="text" ng-model="shipwreck.role" class="form-control" id="role" placeholder="Role" readonly/>
     </div>
 </div>
 <div class="form-group">
-    <label for="condition" class="col-sm-2 control-label">Condition</label>
+    <label for="questions" class="col-sm-2 control-label">Questions Asked</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.condition" class="form-control" id="condition" placeholder="Shipwreck Condition"/>
+        <textarea type="text" rows="10" ng-model="shipwreck.questions" class="form-control" id="questions" placeholder="Please specify the questions asked"></textarea>
     </div>
 </div>
+
 <div class="form-group">
-    <label for="yearDiscovered" class="col-sm-2 control-label">Year Discovered</label>
+    <label for="yearDiscovered" class="col-sm-2 control-label">Rate the candidate</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.yearDiscovered" class="form-control" id="yearDiscovered" placeholder="When was the shipwreck discovered?"/>
+        <select  id="myID" type="text" ng-model="shipwreck.yearDiscovered" class="form-control" id="yearDiscovered">
+            <option value="1">First</option>
+            <option value="1">First</option>
+            <option value="1">First</option>
+            <option value="1">First</option>
+        </select>
     </div>
 </div>
 <div class="form-group">
@@ -29,9 +35,9 @@
     </div>
 </div>
 <div class="form-group">
-    <label for="latitude" class="col-sm-2 control-label">Latitude</label>
+    <label for="scheduledAt" class="col-sm-2 control-label">Scheduled At</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.latitude" class="form-control" id="latitude" placeholder="Latitude"/>
+        <input type="text" ng-model="shipwreck.scheduledAt" class="form-control" id="scheduledAt" placeholder="Scheduled At"/>
     </div>
 </div>
 <div class="form-group">
