--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group" xmlns="http://www.w3.org/1999/html">
     <label for="name" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
         <input type="text" ng-model="shipwreck.name" class="form-control" id="name" placeholder="Candidate Name" readonly/>
@@ -11,39 +11,37 @@
     </div>
 </div>
 <div class="form-group">
+    <label for="scheduledAt" class="col-sm-2 control-label">Scheduled At</label>
+    <div class="col-sm-10">
+        <input type="text" ng-model="shipwreck.scheduledAt" class="form-control" id="scheduledAt" placeholder="Scheduled At" readonly/>
+    </div>
+</div>
+<div class="form-group">
     <label for="questions" class="col-sm-2 control-label">Questions Asked</label>
     <div class="col-sm-10">
-        <textarea type="text" rows="10" ng-model="shipwreck.questions" class="form-control" id="questions" placeholder="Please specify the questions asked"></textarea>
+        <textarea type="text" rows="6" ng-model="shipwreck.questions" class="form-control" id="questions" placeholder="Specify the questions asked"></textarea>
     </div>
 </div>
 
 <div class="form-group">
-    <label for="yearDiscovered" class="col-sm-2 control-label">Rate the candidate</label>
+    <label for="rating" class="col-sm-2 control-label">Rate the candidate</label>
     <div class="col-sm-10">
-        <select  id="myID" type="text" ng-model="shipwreck.yearDiscovered" class="form-control" id="yearDiscovered">
-            <option value="1">First</option>
-            <option value="1">First</option>
-            <option value="1">First</option>
-            <option value="1">First</option>
-        </select>
+        <textarea type="text" ng-model="shipwreck.rating" class="form-control" id="rating" placeholder="Rate the candidate on a scale of 1 to 5 on technical, comuunication and other skills "></textarea>
     </div>
 </div>
 <div class="form-group">
-    <label for="depth" class="col-sm-2 control-label">Depth of Wreck</label>
+    <label for="feedback" class="col-sm-2 control-label">Feedback</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.depth" class="form-control" id="depth" placeholder="Shipwreck dive depth"/>
+        <textarea type="text" rows="6" ng-model="shipwreck.feedback" class="form-control" id="feedback" placeholder="Descriptive Feedback"></textarea>
     </div>
 </div>
 <div class="form-group">
-    <label for="scheduledAt" class="col-sm-2 control-label">Scheduled At</label>
-    <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.scheduledAt" class="form-control" id="scheduledAt" placeholder="Scheduled At"/>
-    </div>
-</div>
-<div class="form-group">
-    <label for="longitude" class="col-sm-2 control-label">Longitude</label>
-    <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.longitude" class="form-control" id="longitude" placeholder="Longitude"/>
+    <label class="col-sm-2 control-label">Expectations were</label>
+    <div class="col-sm-10 bla">
+        <input type="radio">  Outstanding  </input><br />
+        <input type="radio">  Exceeded  </input><br />
+        <input type="radio">  Met  </input><br />
+        <input type="radio">  Below  </input>
     </div>
 </div>
 <div class="form-group">
