--- a/src/main/resources/public/views/shipwreck-view.html
+++ b/src/main/resources/public/views/shipwreck-view.html
@@ -12,7 +12,14 @@
           <td>Role</td>
           <td>{{shipwreck.role}}</td>
       </tr>
-
+      <tr>
+          <td>Questions Asked</td>
+          <td>{{shipwreck.questions}}</td>
+      </tr>
+      <tr>
+          <td>Feedback</td>
+          <td>{{shipwreck.feedback}}</td>
+      </tr>
   </table>
   <div>
       <a class="btn btn-primary" ui-sref="editShipwreck({id:shipwreck.id})">Edit</a>
