--- a/src/main/resources/public/views/home.html
+++ b/src/main/resources/public/views/home.html
@@ -11,6 +11,11 @@
 
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
+    <!--<script type="text/javascript" async>-->
+        <!--function onclick() {-->
+            <!--alert("Hi")-->
+        <!--}-->
+    <!--</script>-->
 </head>
 <div class="jumbotron">
     <div class="container text-center">
