--- a/src/main/resources/public/views/shipwrecks.html
+++ b/src/main/resources/public/views/shipwrecks.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container pad-top">
   <!--<a ui-sref="newShipwreck" class="btn-primary btn-lg nodecoration">Add New Shipwreck</a>-->
   <table class="table shipwrecktable">
@@ -15,11 +16,12 @@
           <td>{{shipwreck.role}}</td>
           <td>{{shipwreck.scheduledAt}}</td>
           <td>
-              <a class="btn btn-success" ui-sref="editShipwreck({id:shipwreck.id})">Start</a>
-              <a class="btn btn-primary" ui-sref="viewShipwreck({id:shipwreck.id})">View Interview Details</a>
-              <!--<a class="btn btn-primary" ui-sref="newShipwreck" class="btn-primary btn-lg nodecoration">Interview Details</a>-->
-              <!--<a class="btn btn-danger"  ng-click="deleteShipwreck(shipwreck)">Delete</a>-->
+              <button class="btn btn-success" ui-sref="editShipwreck({id:shipwreck.id})" id="123">Start</button>
+              <button class="btn btn-primary" ui-sref="viewShipwreck({id:shipwreck.id})">View Interview Details</button>
+              <button class="btn btn-info"  onclick='alert("Interview Completed Notification sent"); this.disabled=true; document.getElementById("123").disabled=true;' >Done</button>
           </td>
       </tr>
   </table>
+
 </div>
+</body>
