--- a/src/main/resources/public/views/home.html
+++ b/src/main/resources/public/views/home.html
@@ -34,7 +34,7 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <p><a class="btn btn-lg btn-primary btn-block" href="#/shipwrecks" role="button">Login &raquo;</a></p>
+                <p><a class="btn btn-lg btn-primary btn-block" href="#/hiring" role="button">Login &raquo;</a></p>
                 <!--<a><button class="btn btn-lg btn-primary btn-block" href="#/shipwrecks" type="submit">Sign in</button></a>-->
             </form>
 
