--- a/src/main/resources/public/views/_form.html
+++ b/src/main/resources/public/views/_form.html
@@ -1,38 +1,38 @@
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
     <label for="name" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.name" class="form-control" id="name" placeholder="Candidate Name" readonly/>
+        <input type="text" ng-model="hiring.name" class="form-control" id="name" placeholder="Candidate Name" readonly/>
     </div>
 </div>
 <div class="form-group">
     <label for="role" class="col-sm-2 control-label">Role</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.role" class="form-control" id="role" placeholder="Role" readonly/>
+        <input type="text" ng-model="hiring.role" class="form-control" id="role" placeholder="Role" readonly/>
     </div>
 </div>
 <div class="form-group">
     <label for="scheduledAt" class="col-sm-2 control-label">Scheduled At</label>
     <div class="col-sm-10">
-        <input type="text" ng-model="shipwreck.scheduledAt" class="form-control" id="scheduledAt" placeholder="Scheduled At" readonly/>
+        <input type="text" ng-model="hiring.scheduledAt" class="form-control" id="scheduledAt" placeholder="Scheduled At" readonly/>
     </div>
 </div>
 <div class="form-group">
     <label for="questions" class="col-sm-2 control-label">Questions Asked</label>
     <div class="col-sm-10">
-        <textarea type="text" rows="6" ng-model="shipwreck.questions" class="form-control" id="questions" placeholder="Specify the questions asked"></textarea>
+        <textarea type="text" rows="6" ng-model="hiring.questions" class="form-control" id="questions" placeholder="Specify the questions asked"></textarea>
     </div>
 </div>
 
 <div class="form-group">
     <label for="rating" class="col-sm-2 control-label">Rate the candidate</label>
     <div class="col-sm-10">
-        <textarea type="text" ng-model="shipwreck.rating" class="form-control" id="rating" placeholder="Rate the candidate on a scale of 1 to 5 on technical, comuunication and other skills "></textarea>
+        <textarea type="text" ng-model="hiring.rating" class="form-control" id="rating" placeholder="Rate the candidate on a scale of 1 to 5 on technical, comuunication and other skills "></textarea>
     </div>
 </div>
 <div class="form-group">
     <label for="feedback" class="col-sm-2 control-label">Feedback</label>
     <div class="col-sm-10">
-        <textarea type="text" rows="6" ng-model="shipwreck.feedback" class="form-control" id="feedback" placeholder="Descriptive Feedback"></textarea>
+        <textarea type="text" rows="6" ng-model="hiring.feedback" class="form-control" id="feedback" placeholder="Descriptive Feedback"></textarea>
     </div>
 </div>
 <div class="form-group">
