--- a/src/main/resources/public/views/shipwreck-view.html
+++ b/src/main/resources/public/views/shipwreck-view.html
@@ -1,27 +1,27 @@
 <div class="container pad-top">
   <table class="table shipwrecktable">
       <tr>
-          <td><h3>Details for {{shipwreck.name}}</h3></td>
+          <td><h3>Details for {{hiring.name}}</h3></td>
           <td></td>
       </tr>
       <tr>
           <td>Name</td>
-          <td>{{shipwreck.name}}</td>
+          <td>{{hiring.name}}</td>
       </tr>
       <tr>
           <td>Role</td>
-          <td>{{shipwreck.role}}</td>
+          <td>{{hiring.role}}</td>
       </tr>
       <tr>
           <td>Questions Asked</td>
-          <td>{{shipwreck.questions}}</td>
+          <td>{{hiring.questions}}</td>
       </tr>
       <tr>
           <td>Feedback</td>
-          <td>{{shipwreck.feedback}}</td>
+          <td>{{hiring.feedback}}</td>
       </tr>
   </table>
   <div>
-      <a class="btn btn-primary" ui-sref="editShipwreck({id:shipwreck.id})">Edit</a>
+      <a class="btn btn-primary" ui-sref="editShipwreck({id:hiring.id})">Edit</a>
   </div>
 </div>
